--- a/_config.yml
+++ b/_config.yml
@@ -25,10 +25,10 @@ disqus_shortname: myshortname
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: 260126 #80B3FF
+  primary: 59323C #80B3FF
   primary-rgb: "24,288,156" #"128,179,255"
   secondary: F2EEB3 #FD6E8A
-  secondary-dark: 233140 #A2122F
+  secondary-dark: 260126 #A2122F
 
 # Footer settings
 footer:
