--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ disqus_shortname: myshortname
 color:
   primary: 59323C #80B3FF
   primary-rgb: "24,288,156" #"128,179,255"
-  secondary: F2EEB3 #FD6E8A
+  secondary: 260126 #FD6E8A
   secondary-dark: 260126 #A2122F
 
 # Footer settings
