--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ footer:
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
-  - title: twitter
+  - title: linkedin
     url: http://twitter.com/jekyllrb
   - title: facebook
     url:
@@ -48,7 +48,7 @@ social:
   - title: bitbucket
     url: http://bitbucket.org/jekyll
   - title: github
-    url: http://github.com/jekyll
+    url: https://github.com/JessRocha
 
 # Postal address (add as many lines as necessary)
 address:
