--- a/_config.yml
+++ b/_config.yml
@@ -40,15 +40,13 @@ footer:
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
   - title: linkedin
-    url: http://twitter.com/jekyllrb
-  - title: facebook
-    url:
-  - title: stack-overflow
-    url: http://stackoverflow.com/questions/tagged/jekyll
-  - title: bitbucket
-    url: http://bitbucket.org/jekyll
+    url: https://www.linkedin.com/in/jessica-rocha-8b02a6104/
   - title: github
     url: https://github.com/JessRocha
+  - title: facebook
+    url: https://www.facebook.com/profile.php?id=100015315334733
+  - title: instagram
+    url: http://bitbucket.org/jekyll
 
 # Postal address (add as many lines as necessary)
 address:
