--- a/_config.yml
+++ b/_config.yml
@@ -43,8 +43,8 @@ social:
     url: https://www.linkedin.com/in/jessica-rocha-8b02a6104/
   - title: github
     url: https://github.com/JessRocha
-  - title: facebook
-    url: https://www.facebook.com/profile.php?id=100015315334733
+  - title: codepen
+    url: https://codepen.io/jessrocha89/#
   - title: instagram
     url: http://bitbucket.org/jekyll
 
