--- a/_config.yml
+++ b/_config.yml
@@ -54,8 +54,7 @@ address:
   - line: 
 
 # Credits content
-credits: 'Theme: Freelancer by <a href="http://startbootstrap.com">Start Bootstrap</a>.
-<br/>Header Font: Nickainly by <a href="https://www.behance.net/seniorsstudio">Senior Studios</a>.'
+credits: 'Theme: Freelancer by <a href="http://startbootstrap.com">Start Bootstrap</a>.<br/>Header Font: Nickainly by <a href="https://www.behance.net/seniorsstudio">Senior Studios</a>.<br/>Icons: Mail Vol 3. by <a href="https://www.iconfinder.com/iconsets/mail-vol-3">Kokota</a>'
 
 # Build settings
 markdown: kramdown
